force-app/main/default/objects/OpportunityContactRole/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <formula>CASESAFEID(Contact.AccountId)</formula>
    <label>Account</label>
    <type>Text</type>
</CustomField>