force-app/main/default/objects/OpportunityContactRole/fields/ContactRole_Id__c.field-meta.xml
<CustomField>
    <fullName>ContactRole_Id__c</fullName>
    <formula>CASESAFEID( Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Role Id</label>
    <type>Text</type>
</CustomField>