force-app/main/default/objects/OpportunityContactRole/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <description>Holds tips about what was wrong on the contact role process</description>
    <label>Sap Error Message</label>
    <type>TextArea</type>
</CustomField>