force-app/main/default/objects/OpportunityContactRole/fields/SapStatus__c.field-meta.xml
<CustomField>
    <fullName>SapStatus__c</fullName>
    <label>Sap Status</label>
    <length>250</length>
    <type>Text</type>
</CustomField>